添加内嵌浏览器模块，并整理调用第三方功能模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.whroid.android.tuo" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +23,26 @@
         <activity android:name=".note.ui.NoteDetailUI"/>
         <activity android:name=".note.ui.NoteMainUI"/>
         <activity android:name=".note.ui.NoteNewUI"/>
+
+
+     <!-- TwebBrowser begin-->
+        <activity android:name="com.whroid.android.twebbrowser.TwebBrowserUI">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="tuo"/>
+            </intent-filter>
+        </activity>
+     <!-- TwebBrowser end-->
+
     </application>
 
 </manifest>
