--- a/twebbrowser/build.gradle
+++ b/twebbrowser/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.whroid.android.tuo"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
@@ -22,8 +21,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile project(':base')
-    compile project(':utility')
-    compile project(':note')
-    compile project(':twebbrowser')
 }
