添加实例模块

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile project(':utility')
     compile project(':note')
     compile project(':twebbrowser')
+    compile project(':sample')
 }
