--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
     package="com.whroid.android.tuo" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application
         android:allowBackup="true"
+        android:name=".TApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -43,6 +47,18 @@
         </activity>
      <!-- TwebBrowser end-->
 
+
+
+       <!-- sample begin-->
+        <activity
+            android:name="com.whroid.android.sample.SampleActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.whroid.android.sample.navigation.DrawerLayoutActivity"
+            android:label="@string/title_activity_drawer_layout" >
+        </activity>
+        <!-- sample end -->
     </application>
 
 </manifest>
