--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,39 @@
             android:name="com.whroid.android.sample.SampleActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name="com.whroid.android.sample.navigation.DrawerLayoutActivity"/>
         <!-- sample end -->
+
+
+
+        <!-- 3share begin -->
+        <!-- 必须注册在微博授权，分享新浪微博时候用到 -->
+        <activity android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
+            android:exported="false" >
+        </activity>
+        <activity android:name="com.whroid.android.share.MainActivity"/>
+        <!-- 3share end -->
+
+
+        <!-- foundation begin -->
+        <activity
+            android:name="com.whroid.android.foundation.ItemListActivity"
+            android:label="@string/app_name" >
+
+        </activity>
+        <activity
+            android:name="com.whroid.android.foundation.ItemDetailActivity"
+            android:label="@string/title_item_detail"
+            android:parentActivityName="com.whroid.android.foundation.ItemListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.whroid.android.foundation.ItemListActivity" />
+        </activity>
+        <!-- foundation end -->
     </application>
 
 </manifest>
